<resources>
    <string name="app_name">RA1_somativa</string>
    <string name="passwordEditText">Password</string>
    <string name="confirmPasswordEditText">Confirm Password</string>
    <string name="registerButton">Sign Up</string>
    <string name="emailEditText">E-mail</string>
    <string name="usernameEditText">Full Name</string>
    <string name="registerText">Sign Up!</string>
    <string name="loginText">Welcome!</string>
    <string name="loginButton">Sign In</string>
    <string name="goToLogin">Click here!</string>
    <string name="goToLoginTextview">Already have a register?</string>
    <string name="goToSignUpTextview">Do not have a register?</string>
    <string name="goToSignUp">Sign Up here!</string>
    <string name="meal">Meal</string>
    <string name="goat">Goat</string>
    <string name="breakfast">Breakfast</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="starter">Starter</string>
    <string name="seafood">Seafood</string>
    <string name="pork">Pork</string>
    <string name="pasta">Pasta</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="lamb">Lamb</string>
    <string name="dessert">Dessert</string>
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="side">Side</string>
    <string name="instructions_details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut elit interdum, elementum justo quis, malesuada tortor.</string>
    <string name="back">Back</string>
    <string name="like">Like</string>
    <string name="favorite">Favorites</string>
    <string name="my_favorite_recipes">My Favorites Recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="title">Cookbook Discovery</string>
    <string name="categories">Categories</string>
    <string name="select_category">Select a category or search for another letter</string>
    <string name="no_favorite_meals">No favorite meals found</string>
    <string name="instructions">Instructions</string>
</resources>