<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.HomeActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/categoryBeefButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/beef"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/categoryChickenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chicken"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/categoryDessertButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dessert"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/categoryLambButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/lamb"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/categoryMiscellaneousButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/miscellaneous"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/categoryPastaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pasta"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/categoryPorkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pork"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/categorySeafoodButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seafood"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/categorySideButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/side"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/categoryStarterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/starter"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/categoryVeganButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vegan"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/categoryVegetarianButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vegetarian"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/categoryBreakfastButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/breakfast"
                android:layout_margin="5dp"
                tools:ignore="ButtonStyle"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/categoryGoatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goat"
                android:layout_margin="5dp"
                style="?android:attr/buttonBarButtonStyle" />



        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>